Diseño para le panel de admin

--- a/src/renderer/login/login.html
+++ b/src/renderer/login/login.html
@@ -5,11 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Iniciar sesión</title>
 		<link rel="stylesheet" href="./login.css" />
+        <!-- SweetAlert2: para mejores alertas y formularios modales -->
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	</head>
 	<body>
 			<div class="login-container">
-				<!-- PANEL DERECHO - FORMULARIO -->
-				<main class="login-panel-derecho">
+					<main class="login-panel-derecho">
 				<div class="form-container">
 					<h2>Inicia sesión</h2>
 					<p class="descripcion">Ingresa tus credenciales para acceder al panel.</p>
